Refactor: reduce boiler plate (#82)
* docs: add refactoring plan for boilerplate reduction

Document identified boilerplate patterns across the codebase:
- RPC method wrapping (59 occurrences)
- Client delegation (50+ methods)
- Builder method repetition
- ABI type records
- Contract invocation handlers
- Test setup boilerplate

Includes proposed solutions and implementation roadmap.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* refactor(rpc): make DefaultReader non-sealed for extensibility [REFACTOR-1.1]

Remove the 'final' modifier from DefaultReader class declaration,
making it non-sealed to allow subclassing while remaining compatible
with the sealed Brane.Reader interface hierarchy. Constructor and
sendWithRetry method remain package-private for subclass access.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* refactor(rpc): make DefaultSigner extend DefaultReader [REFACTOR-1.2]

- Change DefaultSigner to extend DefaultReader instead of delegating
- Remove private reader field and provider field
- Update constructor to call super() with provider, chain, maxRetries, retryConfig
- Delete all 20 delegation methods that simply returned reader.xxx()
- Update remaining reader.xxx() calls to use inherited methods
- Use provider() accessor method for direct provider access
- Update pattern matching test to check more specific types first

This reduces boilerplate by ~105 lines through inheritance.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* refactor(rpc): make DefaultTester extend DefaultSigner [REFACTOR-1.3]

- Change DefaultTester from 'implements Brane.Tester' to
  'extends DefaultSigner implements Brane.Tester'
- Make DefaultSigner non-sealed to allow extension
- Remove 24 boilerplate delegation methods that now inherit from parent
- Add override for sendTransactionAndWait() to resolve diamond conflict
- Update asSigner() to return 'this' instead of delegated field
- Fix test pattern matching order (most specific type first)