@@ -10,6 +10,7 @@ import java.util.function.Supplier;
 import io.brane.core.error.RevertException;
 import io.brane.core.error.RpcException;
 import io.brane.rpc.exception.RetryExhaustedException;
+import io.brane.rpc.internal.RpcUtils;
 
 /**
  * Internal utility for retrying RPC calls with exponential backoff.
@@ -191,7 +192,7 @@ final class RpcRetry {
             final java.util.List<Throwable> failedAttempts,
             final long startTime) {
         final long totalDuration = System.currentTimeMillis() - startTime;
-        final Throwable lastFailure = failedAttempts.get(failedAttempts.size() - 1);
+        final Throwable lastFailure = failedAttempts.getLast();
 
         final RetryExhaustedException exhausted = new RetryExhaustedException(
                 failedAttempts.size(),
@@ -325,7 +326,7 @@ final class RpcRetry {
                     final RpcException rpcEx = new RpcException(
                             err.code(),
                             err.message(),
-                            err.data() != null ? err.data().toString() : null,
+                            RpcUtils.extractErrorData(err.data()),
                             (Long) null,
                             (Throwable) null);
 
